# metaphor_web_app_ver1.0

./: README.md
backend/: pyproject.toml  text_engine.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  data.js  index.js
frontend/src/components/: App.js  ChartBlock.js  ContextMenu.js  MetaphorCluster.js  MetaphorDetails.js  MetaphorIdea.js
frontend/src/store/: store.js
frontend/src/store/actions/: chartActions.js  contextMenuActions.js
frontend/src/store/reducers/: chartReducer.js  contextMenuReducer.js
frontend/src/styles/: index.css
