[tool.poetry]
name = "metaphor"
version = "0.1.0"
description = ""
authors = ["riisatoro <riisa.toro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
keybert = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
